I have done the first step in localization by user's settings. It has been realized by using "next-intl" module. The localization by user's settings doesn't need to have any additional logics in "middleware.ts" file or a special routing. A language is set by getting data about it from the CustomSets table in SQLite3 database.
Language setting only works one way: you can't change your language setting at the settings page yet. The next commit will have full final logic for it.

Of course, I want to change the signing up process. When you are being signing up, websource puts into database the only you common personal data: name, surname, email, etc. But it should save common default settings too, due to 1-to-1 relationship between Users and CustomSets tables.
***
And I didn't forget about signing up through other social networks: Google and GitHub.

--- a/cafeversity/languages/by.json
+++ b/cafeversity/languages/by.json
@@ -1,10 +1,10 @@
 {
     "SettingsPage": {
-        "stickyNavbarName": {
+        "stickyNavbar": {
             "name": "Налады Акаўнту",
-            "parts": [
-                "Агульныя Налады", "Смакі & Цялесная Канстытуцыя", "Выгляд Старонкі"
-            ]
+            "part1": "Агульныя Налады",
+            "part2": "Смакі & Цялесная Канстытуцыя",
+            "part3": "Выгляд Старонкі"
         },
         "firstSetsPart": {
             "name": "Агульныя Налады",
@@ -13,17 +13,15 @@
                 "changePhotoButton": "Змяніць Фота",
                 "deletePhotoButton": "Выдаліць Фота"
             },
-            "nameInput": "Імя",
-            "surnameInput": "Прозвішча",
-            "nicknameInput": "Мянушка",
+            "input1": "Імя",
+            "input2": "Прозвішча",
+            "input3": "Мянушка",
             "cancelButton": "Адмена",
-            "saveButton": [
-                "Змена", "Захова"
-            ],
+            "saveButtonType1": "Змена",
+            "saveButtonType2": "Захова",
             "changesDialog": {
-                "mainQuestion": [
-                    "Ці згодзен Ты са зменамі?", "Хочаш адмовіць змены?"
-                ],
+                "mainQuestion1": "Ці згодзен Ты са зменамі?",
+                "mainQuestion2": "Хочаш адмовіць змены?",
                 "accessButton": "Так",
                 "denyButton": "Не"
             }
