Finally, I have connected all settings tools with data from database's tables. These settings like taste preferencies, calorimeter, font settings and brand colour are getting values from setState variable (using setsReducer) and their values are being saved by Server Action function, named allSetsUpdate(). It is located in "settings.ts" file in the 'app/actions' folder.

--- a/cafeversity/languages/by.json
+++ b/cafeversity/languages/by.json
@@ -24,7 +24,8 @@
                 "mainQuestion2": "Хочаш адмовіць змены?",
                 "accessButton": "Так",
                 "denyButton": "Не"
-            }
+            },
+            "updatedSetsSaving": "Захаваць змены ў працы вэб-старонак?"
         },
         "secondSetsPart": {
             "name": "Смакі & Цялесная Канстытуцыя",
