The third step has already done too. Authentication pages have a separate routes group.
I forgot to write about routes group names at 2 last commits.
I. Usual routes for not registered users are grouped into "(commonSite)" group.
II. Routes for signed in users – "(userPage)" group.
III. Routes for registration, logging in/out and recoveries – "(auth)" group.

Unfortunately, I haven't understood how to rewrite APIs for storing in "src/app/api" folder. I have left them at the previous folder ("src/pages/api").

But I have added some localizations for webpage's tools: the bottom vanishing navbar, Exit button on the top-right corner.

And, of course, I have deleted a few useless files for Cafeversity project: _app.tsx, [ArticlePage2].tsx and ExitProcess.tsx. The last one was replaced by its clone at "(auth)/logout" folder.

--- a/cafeversity/languages/by.json
+++ b/cafeversity/languages/by.json
@@ -1,4 +1,18 @@
 {
+    "MainUserPage": {
+        "vanishingNavbar": {
+            "menu": "Меню",
+            "main": "Агульная",
+            "news": "Навіны",
+            "settings": "Налады акаўнту"
+        },
+        "exitButton": {
+            "name": "Выхад",
+            "question": "Вы на сам рэч хаціце выйсці?",
+            "access": "Так",
+            "deny": "Не"
+        }
+    },
     "SettingsPage": {
         "stickyNavbar": {
             "name": "Налады Акаўнту",
@@ -63,5 +77,8 @@
                 "fontQuestion3": "Абяры Таўшчыню Шрыфту"
             }
         }
+    },
+    "ExitPage": {
+        "name": "Адбываецца Выхад. Чакайце, калі ласка..."
     }
 }
