--- a/cafeversity/languages/by.json
+++ b/cafeversity/languages/by.json
@@ -1,4 +1,57 @@
 {
+    "HeaderComponents": {
+        "WeatherWeekday": {
+            "weekdays": {
+                "sun": "Нд",
+                "mon": "Пн",
+                "tue": "Аў",
+                "wed": "Ср",
+                "thu": "Чц",
+                "fri": "Пт",
+                "sat": "Сб"
+            }
+        },
+        "Dating": {
+            "months": {
+                "jan": "Студзень",
+                "feb": "Люты",
+                "mar": "Сакавік",
+                "apr": "Красавік",
+                "may": "Травень",
+                "jun": "Чэрвень",
+                "jul": "Ліпень",
+                "aug": "Жнівень",
+                "sep": "Верасень",
+                "oct": "Кастрычнік",
+                "nov": "Лістапад",
+                "dec": "Снежань"
+            }
+        },
+        "Entrance": "Ўваход"
+    },
+    "GreetingPage": {
+        "slidesText": {
+            "slide1": {
+                "line1": "The first line: Lorem, ipsum dolor.",
+                "line2": "The second line: Lorem ipsum dolor sit amet.",
+                "line3": "The third line: Lorem ipsum dolor sit."
+            },
+            "slide2": {
+                "line4": "The fourth line: Lorem, ipsum dolor.",
+                "line5": "The fifth line: Lorem ipsum dolor sit amet.",
+                "line6": "The sixth line: Lorem ipsum dolor sit."
+            },
+            "slide3": {
+                "line7": "The seventh line: Lorem, ipsum dolor.",
+                "line8": "The eighth line: Lorem ipsum dolor sit amet.",
+                "line9": "The nineth line: Lorem ipsum dolor sit."
+            }
+        },
+        "bottomButtons": {
+            "left": "Сённяшнія Стравы",
+            "right": "Ежа Свету"
+        }
+    },
     "MainUserPage": {
         "vanishingNavbar": {
             "menu": "Меню",
