--- a/cafeversity/languages/en.json
+++ b/cafeversity/languages/en.json
@@ -1,4 +1,57 @@
 {
+    "HeaderComponents": {
+        "WeatherWeekday": {
+            "weekdays": {
+                "sun": "Sun",
+                "mon": "Mon",
+                "tue": "Tue",
+                "wed": "Wed",
+                "thu": "Thu",
+                "fri": "Fri",
+                "sat": "Sat"
+            }
+        },
+        "Dating": {
+            "months": {
+                "jan": "January",
+                "feb": "February",
+                "mar": "March",
+                "apr": "April",
+                "may": "May",
+                "jun": "June",
+                "jul": "July",
+                "aug": "August",
+                "sep": "September",
+                "oct": "October",
+                "nov": "November",
+                "dec": "December"
+            }
+        },
+        "Entrance": "Sign In"
+    },
+    "GreetingPage": {
+        "slidesText": {
+            "slide1": {
+                "line1": "The first line: Lorem, ipsum dolor.",
+                "line2": "The second line: Lorem ipsum dolor sit amet.",
+                "line3": "The third line: Lorem ipsum dolor sit."
+            },
+            "slide2": {
+                "line4": "The fourth line: Lorem, ipsum dolor.",
+                "line5": "The fifth line: Lorem ipsum dolor sit amet.",
+                "line6": "The sixth line: Lorem ipsum dolor sit."
+            },
+            "slide3": {
+                "line7": "The seventh line: Lorem, ipsum dolor.",
+                "line8": "The eighth line: Lorem ipsum dolor sit amet.",
+                "line9": "The nineth line: Lorem ipsum dolor sit."
+            }
+        },
+        "bottomButtons": {
+            "left": "Today's Meals",
+            "right": "World Food"
+        }
+    },
     "MainUserPage": {
         "vanishingNavbar": {
             "menu": "Menu",
