This development step was long, hard and demanded the huge amount of changes.
I have added "layout.tsx" files for each section of parallel routes to accelerate rendering and showing charts 2 times faster (app. 5 seconds instead of 10 or 12 seconds).

Localizations have been added for "login" folder of paths and for "admiN_Login" folder of admin registartion paths.

Additionally, I have changed AdminUsers Prisma model having finished rewriting some fields:
- default values has been set for EmailConfirmed and Theme fields.
- 2 new fields has been added (SentCode and SecretWordUsed).

--- a/cafeversity/languages/by.json
+++ b/cafeversity/languages/by.json
@@ -92,7 +92,16 @@
             "passwordRecovery": "Аднаўленне Паролі",
             "accessUpdate": "Аднаўленне Доступу",
             "registration": "Рэгістрацыйная Форма",
-            "enterGate": "Уваходная Брама"
+            "enterGate": "Уваходная Брама",
+            "adminGate": "Адмінаўская Брама",
+            "adminReg": "Рэгістрацыя Адмінаў",
+            "codeConfirmation": "Пацвярджэнне Ўваходу"
+        },
+        "texts": {
+            "codeConfirmation": {
+                "part1": "На Ваш адрас эляктроннай пошты '",
+                "part2": "' быў дасланы спецыяльны код для пацвярдэння ўваходу як адмін."
+            }
         },
         "fields": {
             "passwordField": {
@@ -117,6 +126,22 @@
             "nicknameField": {
                 "name": "Мянушка (Нікнэйм)",
                 "placeholder": "Андрэйка Банавентура"
+            },
+            "unknownwordField": {
+                "name": "Таемнае Слова",
+                "placeholder": "***********"
+            },
+            "telephoneField": {
+                "name": "Нумар Мабільнага Тэлефону",
+                "placeholder": "+375(**)***-**-**"
+            },
+            "emailCodeConfirmField": {
+                "name": "Код Пацвярджэння (****-*****-****)",
+                "placeholder": "****-*****-****"
+            },
+            "otherNames": {
+                "adminRole": "Роля Адміну",
+                "language": "Мова"
             }
         },
         "buttons": {
@@ -127,7 +152,9 @@
             "signUp": "Рэгістрацыя",
             "exit": "Выхад",
             "logIn": "Увайсці",
-            "back": "Ўзад"
+            "back": "Ўзад",
+            "confirm": "Пацвярджэнне",
+            "adminEntrance": "Да Адмінаўскай Брамы"
         },
         "links": {
             "newRecovery": {
