This is the first step of rewriting for (admin) route group using localizations, signing-in logics.
This commit includes many problems and processes that don't work enough correctly. It will be the great settings work ahead.

--- a/cafeversity/languages/by.json
+++ b/cafeversity/languages/by.json
@@ -264,5 +264,16 @@
     },
     "ExitPage": {
         "name": "Адбываецца Выхад. Чакайце, калі ласка..."
+    },
+    "AdminDashboard": {
+        "AdminHeaderBlock": {
+            "title": "Меню Адміна",
+            "themes": {
+                "light": "Светлая",
+                "dark": "Цёмная"
+            },
+            "settings": "Налады",
+            "exit": "Выхад"
+        }
     }
 }
